# TimeLocker

./: .gitignore  CMakeLists.txt
BackendService/: Content.h  WebSite.cpp  Web_Site.h
BackendService/src/: WebSite.cpp
BackendService/template/: GetForm.tmpl  Getform.tmpl  PostForm.tmpl  PostResponse.tmpl
backend_server_testing/: CMakeLists.txt  testing.cpp
include/: BoostNetwork.h  Checkers.hpp  Client.h  Managers.h  Model.h  Network.h  Presenter.h  View.h  boostNetwork.h  checkers.hpp  consoleApplication.h  loggerDatabase.h  model.h  view_presenter.h
lib/: ConsoleApplication.cpp
lib/BoostNetworkClient/: BoostNetworkClient.cpp  HeaderCreator.cpp
lib/Models/: Model.cpp
lib/Presenters/: ApplicationPresenter.cpp
lib/Views/: ConsoleErrorView.cpp
lib/Views/pages/: ConsoleViewSetApplicationModePage.cpp  ConsoleViewStartPage.cpp
lib/Views/pages/download/: ConsoleViewDownloadFileMessagePage.cpp  ConsoleViewSetKeyPage.cpp  ConsoleViewSetPasswordPage.cpp
lib/Views/pages/upload/: ConsoleViewSetEnteredUsersPasswordPage.cpp  ConsoleViewSetFileLifetimePage.cpp  ConsoleViewSetFilePathPage.cpp  ConsoleViewSetPasswordModePage.cpp  ConsoleViewUploadFileMessagePage.cpp
nginx/: my_domain
src/: loggerDatabase.cpp  main.cpp  storage.cpp  storageMYSQL.h  storageMYSQL.hpp
src/configs/: database.config  stringCreator.config
test/: ArgumentHandlerTest.cpp  CMakeLists.txt  ConnectionManagerTest.cpp  DownloadManagerTest.cpp  ReaderTest.cpp  UploadManagerTest.cpp  main.cpp  querySet_test.cpp  storageMYSQL_test.cpp  storage_test.cpp  testing.cpp  utilityFunc.cpp  web_service_test.cpp
test/ModelTests/: TestModel.cpp
test/PresenterTests/: TestAppPresenter.cpp
test/ViewTests/: TestConsoleErrorView.cpp  TestConsoleView.cpp
test/configs/: databaseERROR.config  databaseSUCCESS.config  stringCreator.config
test/path/to/: outputFile
test/path/to/argumentHandlerTests/: DownloadArgumentTest  InvalidArgumentTest  InvalidCountOfArgumentsTest  NoArgumentsTest  UploadArgumentTest
test/path/to/correct/: appMode  downloadScript  fileKey  filePassword  filePasswordPair  filePath  uploadScript
test/path/to/filePathTests/: NoSuchFileTest  ValidFilePathTest
test/path/to/incorrect/: appMode  fileKey  fileLifetime  filePassword  filePasswordPair  filePath
test/storageTests/: storageMYSQL_test.cpp
uml/: backend.drawio
